--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "^7.29.0",
+    "eslint-config-next": "^11.0.0",
     "eslint-plugin-react": "^7.24.0"
   }
 }
